helloworld/kubernetes/version2/istio/gateway.yml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld-destination
spec:
  host: istio-helloworld.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v0.0.1
  - name: v2
    labels:
      version: v0.0.2
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio-lab.cch.com"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "istio-lab.cch.com"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - headers:
        role:
          exact: qa
    route:
     - destination:
        host: istio-helloworld.default.svc.cluster.local
        port:
          number: 80
        subset: v2  
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: istio-helloworld.default.svc.cluster.local
        port:
          number: 80
        subset: v1
